Drag Threshold instead of Mouse Drag Threshold for Mouse Input #65391

Closed
opened 2019-06-01 13:27:52 +02:00 by David Korzeniewski · 7 comments

System Information
Operating system: Windows-10-10.0.17134 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.64

Blender Version
Broken: version: 2.80 (sub 74), branch: blender2.7, commit date: 2019-05-31 22:45, hash: cc600de669
Worked: (optional)

Short description of error
The general Drag Threshold setting is used for mouse input instead of Mouse Drag Threshold in orthographic view.

Exact steps for others to reproduce the error

  • Open Blender (Version, see above).
  • Select the default cube.
  • Go to orthographic view (e.g. Num5, or Num1).
  • Select move tool.

Drag gizmo. Result: Gizmo only moves after being moved by Drag Threshold.

This only happens the first time using the gizmo after switching the mode. (Maybe also after other operations, but I cannot reproduce it easily in other cases.)

To confirm, that it is Drag Threshold, set this setting to an extremely high or low value and repeat the steps above.

**System Information** Operating system: Windows-10-10.0.17134 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.64 **Blender Version** Broken: version: 2.80 (sub 74), branch: blender2.7, commit date: 2019-05-31 22:45, hash: `cc600de669` Worked: (optional) **Short description of error** The general *Drag Threshold* setting is used for mouse input instead of *Mouse Drag Threshold* in orthographic view. **Exact steps for others to reproduce the error** - Open Blender (Version, see above). - Select the default cube. - Go to orthographic view (e.g. Num5, or Num1). - Select move tool. # Drag gizmo. Result: Gizmo only moves after being moved by *Drag Threshold*. This only happens the first time using the gizmo after switching the mode. (Maybe also after other operations, but I cannot reproduce it easily in other cases.) To confirm, that it is *Drag Threshold*, set this setting to an extremely high or low value and repeat the steps above.

Added subscriber: @cody-1

Added subscriber: @cody-1

#65417 was marked as duplicate of this issue

#65417 was marked as duplicate of this issue

Added subscriber: @WilliamReynish

Added subscriber: @WilliamReynish
Campbell Barton was assigned by William Reynish 2019-06-01 23:32:22 +02:00

Indeed, can confirm. Doesn't happen every time - seems to only happen the first time you drag after enabling the gizmo.

Also seems to happen the first time you use gizmos are re-orienting the view.

This really makes gizmos feel a lot more sluggish.

Indeed, can confirm. Doesn't happen every time - seems to only happen the first time you drag after enabling the gizmo. Also seems to happen the first time you use gizmos are re-orienting the view. This really makes gizmos feel a lot more sluggish.

Added subscribers: @kpavicic, @ideasman42, @Rawalanche, @brecht

Added subscribers: @kpavicic, @ideasman42, @Rawalanche, @brecht

This issue was referenced by 39919e3532

This issue was referenced by 39919e35326c732141bfd2d740b19000b6bc1d51

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#65391
No description provided.