Fix T65391: Wrong drag threshold for mouse motion